♻️refactor : 게시물 작성, 필터링 조회 수정